--- a/_posts/actualites/09_14/2014-09-17-actualite_1.md
+++ b/_posts/actualites/09_14/2014-09-17-actualite_1.md
@@ -1,11 +1,17 @@
 ---
 layout: post
-category : actus
-title : "actu_1"
-image : "actu_1.jpg"
+category: actus
+title: actu_1
+image: actu_1.jpg
 tagline: ""
-tags : ["notre société","notre équipe","nos actifs gérés","actualités"]
+tags: 
+  - notre société
+  - notre équipe
+  - nos actifs gérés
+  - actualités
+published: true
 ---
+
 {% include JB/setup %}
 
-actualités 1
+actualités contenu
