--- a/_posts/actualites/09_14/2014-09-17-actualite_1.md
+++ b/_posts/actualites/09_14/2014-09-17-actualite_1.md
@@ -1,17 +1,22 @@
 ---
-layout: post
+layout: actualites
 category: actus
 title: actu_1
 image: actu_1.jpg
-tagline: ""
-tags: 
-  - notre société
-  - notre équipe
-  - nos actifs gérés
-  - actualités
+tagline: "Lorem ipsum Deserunt aliquip do velit tempor ex."
 published: true
 ---
 
 {% include JB/setup %}
 
-actualités contenu
+<div class="row">
+<div class="col-md-12 col-lg-12">
+        <img src="{{ ASSET_PATH }}/metiers/gestion_technique.png" class="img-responsive">
+</div>
+<div class="col-md-10 col-md-offset-1 text-center">
+ <p><strong>Lorem ipsum Aliquip cupidatat dolore do ea ex sed tempor occaecat ad in tempor et proident officia ea ullamco in aliqua Duis id eu amet nostrud mollit dolore Ut enim irure amet labore incididunt non velit reprehenderit culpa ut in in sint aute nisi exercitation culpa sint ut exercitation officia sunt velit velit sit nostrud aliqua nisi</strong><br/><br/>voluptate enim dolore magna in nulla ullamco Ut qui in Excepteur enim nulla pariatur laboris deserunt consectetur id sunt laboris non qui occaecat voluptate anim ut occaecat cupidatat elit sint irure magna magna id id fugiat aliqua deserunt labore do ad ut dolor esse irure aliquip labore do ea eiusmod aliqua ad ullamco exercitation<br/> qui id dolor culpa consequat eu qui sed culpa ea voluptate Excepteur Ut mollit mollit commodo eu ut non dolor in nisi qui laboris in nisi dolore dolor amet consequat dolor sed ullamco consequat Ut esse ut amet do cillum aliqua ullamco fugiat in commodo ea reprehenderit Duis fugiat.</p>
+<p><strong>Lorem ipsum Aliquip cupidatat dolore do ea ex sed tempor occaecat ad in tempor et proident officia ea ullamco in aliqua Duis id eu amet nostrud mollit dolore Ut enim irure amet labore incididunt non velit reprehenderit culpa ut in in sint aute nisi exercitation culpa sint ut exercitation officia sunt velit velit sit nostrud aliqua nisi</strong><br/><br/>voluptate enim dolore magna in nulla ullamco Ut qui in Excepteur enim nulla pariatur laboris deserunt consectetur id sunt laboris non qui occaecat voluptate anim ut occaecat cupidatat elit sint irure magna magna id id fugiat aliqua deserunt labore do ad ut dolor esse irure aliquip labore do ea eiusmod aliqua ad ullamco exercitation<br/> qui id dolor culpa consequat eu qui sed culpa ea voluptate Excepteur Ut mollit mollit commodo eu ut non dolor in nisi qui laboris in nisi dolore dolor amet consequat dolor sed ullamco consequat Ut esse ut amet do cillum aliqua ullamco fugiat in commodo ea reprehenderit Duis fugiat.</p>
+<p><strong>Lorem ipsum Aliquip cupidatat dolore do ea ex sed tempor occaecat ad in tempor et proident officia ea ullamco in aliqua Duis id eu amet nostrud mollit dolore Ut enim irure amet labore incididunt non velit reprehenderit culpa ut in in sint aute nisi exercitation culpa sint ut exercitation officia sunt velit velit sit nostrud aliqua nisi</strong><br/><br/>voluptate enim dolore magna in nulla ullamco Ut qui in Excepteur enim nulla pariatur laboris deserunt consectetur id sunt laboris non qui occaecat voluptate anim ut occaecat cupidatat elit sint irure magna magna id id fugiat aliqua deserunt labore do ad ut dolor esse irure aliquip labore do ea eiusmod aliqua ad ullamco exercitation<br/> qui id dolor culpa consequat eu qui sed culpa ea voluptate Excepteur Ut mollit mollit commodo eu ut non dolor in nisi qui laboris in nisi dolore dolor amet consequat dolor sed ullamco consequat Ut esse ut amet do cillum aliqua ullamco fugiat in commodo ea reprehenderit Duis fugiat.</p>
+<p><strong>Lorem ipsum Aliquip cupidatat dolore do ea ex sed tempor occaecat ad in tempor et proident officia ea ullamco in aliqua Duis id eu amet nostrud mollit dolore Ut enim irure amet labore incididunt non velit reprehenderit culpa ut in in sint aute nisi exercitation culpa sint ut exercitation officia sunt velit velit sit nostrud aliqua nisi</strong><br/><br/>voluptate enim dolore magna in nulla ullamco Ut qui in Excepteur enim nulla pariatur laboris deserunt consectetur id sunt laboris non qui occaecat voluptate anim ut occaecat cupidatat elit sint irure magna magna id id fugiat aliqua deserunt labore do ad ut dolor esse irure aliquip labore do ea eiusmod aliqua ad ullamco exercitation<br/> qui id dolor culpa consequat eu qui sed culpa ea voluptate Excepteur Ut mollit mollit commodo eu ut non dolor in nisi qui laboris in nisi dolore dolor amet consequat dolor sed ullamco consequat Ut esse ut amet do cillum aliqua ullamco fugiat in commodo ea reprehenderit Duis fugiat.</p>
+</div>
+</div>
