--- a/_posts/actualites/09_14/2014-09-17-actualite_1.md
+++ b/_posts/actualites/09_14/2014-09-17-actualite_1.md
@@ -1,9 +1,9 @@
 ---
 layout: actualites
 category: actus
-title: actu_1
+title: "NOUVELLE ADRESSE,NOUVELLE IDENTITÉ."
 image: actu_1.jpg
-tagline: "Lorem ipsum Deserunt aliquip do velit tempor ex."
+tagline: ""
 published: true
 ---
 
@@ -14,9 +14,13 @@ published: true
         <img src="{{ ASSET_PATH }}/metiers/gestion_technique.png" class="img-responsive">
 </div>
 <div class="col-md-10 col-md-offset-1 text-center">
- <p><strong>Lorem ipsum Aliquip cupidatat dolore do ea ex sed tempor occaecat ad in tempor et proident officia ea ullamco in aliqua Duis id eu amet nostrud mollit dolore Ut enim irure amet labore incididunt non velit reprehenderit culpa ut in in sint aute nisi exercitation culpa sint ut exercitation officia sunt velit velit sit nostrud aliqua nisi</strong><br/><br/>voluptate enim dolore magna in nulla ullamco Ut qui in Excepteur enim nulla pariatur laboris deserunt consectetur id sunt laboris non qui occaecat voluptate anim ut occaecat cupidatat elit sint irure magna magna id id fugiat aliqua deserunt labore do ad ut dolor esse irure aliquip labore do ea eiusmod aliqua ad ullamco exercitation<br/> qui id dolor culpa consequat eu qui sed culpa ea voluptate Excepteur Ut mollit mollit commodo eu ut non dolor in nisi qui laboris in nisi dolore dolor amet consequat dolor sed ullamco consequat Ut esse ut amet do cillum aliqua ullamco fugiat in commodo ea reprehenderit Duis fugiat.</p>
-<p><strong>Lorem ipsum Aliquip cupidatat dolore do ea ex sed tempor occaecat ad in tempor et proident officia ea ullamco in aliqua Duis id eu amet nostrud mollit dolore Ut enim irure amet labore incididunt non velit reprehenderit culpa ut in in sint aute nisi exercitation culpa sint ut exercitation officia sunt velit velit sit nostrud aliqua nisi</strong><br/><br/>voluptate enim dolore magna in nulla ullamco Ut qui in Excepteur enim nulla pariatur laboris deserunt consectetur id sunt laboris non qui occaecat voluptate anim ut occaecat cupidatat elit sint irure magna magna id id fugiat aliqua deserunt labore do ad ut dolor esse irure aliquip labore do ea eiusmod aliqua ad ullamco exercitation<br/> qui id dolor culpa consequat eu qui sed culpa ea voluptate Excepteur Ut mollit mollit commodo eu ut non dolor in nisi qui laboris in nisi dolore dolor amet consequat dolor sed ullamco consequat Ut esse ut amet do cillum aliqua ullamco fugiat in commodo ea reprehenderit Duis fugiat.</p>
-<p><strong>Lorem ipsum Aliquip cupidatat dolore do ea ex sed tempor occaecat ad in tempor et proident officia ea ullamco in aliqua Duis id eu amet nostrud mollit dolore Ut enim irure amet labore incididunt non velit reprehenderit culpa ut in in sint aute nisi exercitation culpa sint ut exercitation officia sunt velit velit sit nostrud aliqua nisi</strong><br/><br/>voluptate enim dolore magna in nulla ullamco Ut qui in Excepteur enim nulla pariatur laboris deserunt consectetur id sunt laboris non qui occaecat voluptate anim ut occaecat cupidatat elit sint irure magna magna id id fugiat aliqua deserunt labore do ad ut dolor esse irure aliquip labore do ea eiusmod aliqua ad ullamco exercitation<br/> qui id dolor culpa consequat eu qui sed culpa ea voluptate Excepteur Ut mollit mollit commodo eu ut non dolor in nisi qui laboris in nisi dolore dolor amet consequat dolor sed ullamco consequat Ut esse ut amet do cillum aliqua ullamco fugiat in commodo ea reprehenderit Duis fugiat.</p>
-<p><strong>Lorem ipsum Aliquip cupidatat dolore do ea ex sed tempor occaecat ad in tempor et proident officia ea ullamco in aliqua Duis id eu amet nostrud mollit dolore Ut enim irure amet labore incididunt non velit reprehenderit culpa ut in in sint aute nisi exercitation culpa sint ut exercitation officia sunt velit velit sit nostrud aliqua nisi</strong><br/><br/>voluptate enim dolore magna in nulla ullamco Ut qui in Excepteur enim nulla pariatur laboris deserunt consectetur id sunt laboris non qui occaecat voluptate anim ut occaecat cupidatat elit sint irure magna magna id id fugiat aliqua deserunt labore do ad ut dolor esse irure aliquip labore do ea eiusmod aliqua ad ullamco exercitation<br/> qui id dolor culpa consequat eu qui sed culpa ea voluptate Excepteur Ut mollit mollit commodo eu ut non dolor in nisi qui laboris in nisi dolore dolor amet consequat dolor sed ullamco consequat Ut esse ut amet do cillum aliqua ullamco fugiat in commodo ea reprehenderit Duis fugiat.</p>
+<p><b>NOUVELLE ADRESSE</b><br/>
+
+ELYGESTION a déménagé et est heureux de vous accueillir dans ses nouveaux bureaux situés au 76 rue Crillon, 69006 Lyon.<br/>
+Un changement de locaux qui marque un nouvel envol  et la croissance continue de notre société.
+<br/><br/>
+<b>NOUVELLE IDENTITÉ<b><br/>
+
+Ce nouvel élan est aussi symbolisé par notre nouvelle identité graphique et notre nouveau site internet. Un logo modernisé et un  support numérique plus ergonomique qui correspondent d’avantage à notre culture d'entreprise. </p>
 </div>
 </div>
