--- a/_posts/references/2014-09-17-reference_1.md
+++ b/_posts/references/2014-09-17-reference_1.md
@@ -1,8 +1,8 @@
 ---
 layout: references
 category : references
-title : "reference_1"
-image : "reference.jpg"
+title : "Adecco"
+image : "adeco.png"
 tagline: ""
 tags : ["notre société","notre équipe","nos actifs gérés","actualités"]
 ---
