--- a/_posts/references/2014-09-17-reference_2.md
+++ b/_posts/references/2014-09-17-reference_2.md
@@ -1,11 +1,9 @@
 ---
 layout: references
 category : references
-title : "reference_2"
-image : "reference.jpg"
+title : "Aquasourca"
+image : "aquasourca.png"
 tagline: ""
 tags : ["notre société","notre équipe","nos actifs gérés","actualités"]
 ---
 {% include JB/setup %}
-
-reference
