--- a/_posts/references/2014-09-17-reference_7.md
+++ b/_posts/references/2014-09-17-reference_7.md
@@ -1,8 +1,8 @@
 ---
 layout: references
 category : references
-title : "Bioderma"
-image : "bioderma.png"
+title : "GPIM"
+image : "macif.png"
 tagline: ""
 tags : ["notre société","notre équipe","nos actifs gérés","actualités"]
 ---
