--- a/_posts/references/2014-09-17-reference_9.md
+++ b/_posts/references/2014-09-17-reference_9.md
@@ -1,8 +1,8 @@
 ---
 layout: references
 category : references
-title : "Bioderma"
-image : "bioderma.png"
+title : "Proudreed"
+image : "proudreed.png"
 tagline: ""
 tags : ["notre société","notre équipe","nos actifs gérés","actualités"]
 ---
