--- a/_posts/actualites/09_14/2014-09-17-actualite_1.md
+++ b/_posts/actualites/09_14/2014-09-17-actualite_1.md
@@ -1,7 +1,7 @@
 ---
 layout: actualites
 category: actus
-title: "NOUVELLE ADRESSE,NOUVELLE IDENTITÉ."
+title: "NOUVELLE ADRESSE"
 image: actu_1.jpg
 tagline: ""
 published: true
@@ -11,7 +11,9 @@ published: true
 
 <div class="row">
 <div class="col-md-12 col-lg-12">
-        <img src="{{ ASSET_PATH }}/metiers/gestion_technique.png" class="img-responsive">
+  <div class="thumbnail">
+        <img src="{{ ASSET_PATH }}/actus/actu_1_large.jpg" class="img-responsive">
+  </div>
 </div>
 <div class="col-md-10 col-md-offset-1 text-center">
 <p><b>NOUVELLE ADRESSE</b><br/>
@@ -19,8 +21,6 @@ published: true
 ELYGESTION a déménagé et est heureux de vous accueillir dans ses nouveaux bureaux situés au 76 rue Crillon, 69006 Lyon.<br/>
 Un changement de locaux qui marque un nouvel envol  et la croissance continue de notre société.
 <br/><br/>
-<b>NOUVELLE IDENTITÉ<b><br/>
-
-Ce nouvel élan est aussi symbolisé par notre nouvelle identité graphique et notre nouveau site internet. Un logo modernisé et un  support numérique plus ergonomique qui correspondent d’avantage à notre culture d'entreprise. </p>
+</p>
 </div>
 </div>
